# OpenRD

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
crates/openrd-proto/: Cargo.toml
crates/openrd-proto/src/: audio.rs  capabilities.rs  channel.rs  chat.rs  clipboard.rs  control.rs  cursor.rs  display.rs  error.rs  file.rs  frame.rs  input.rs  lib.rs
crates/openrd-server/: Cargo.toml
crates/openrd-server/src/: control.rs  main.rs
crates/openrd-test-client/: Cargo.toml
crates/openrd-test-client/src/: main.rs
docs/: 00-goals-and-non-goals.md  01-use-cases.md  02-requirements.md  03-threat-model.md  10-architecture-overview.md  11-channel-model.md  12-transport-choice.md  13-glossary.md  20-wire-format-v0.md  21-state-machines.md  22-capability-negotiation.md  appendix-recording.md  decisions.md
docs/studies/: apache-guacamole.md  file-transfer.md  rdp.md  rustdesk.md  spice.md  sunshine-moonlight.md  vnc-rfb.md
scripts/: smoke-test.sh
web/: README.md  client.js  index.html
