[workspace]
resolver = "2"
members = [
    "crates/openrd-proto",
    "crates/openrd-server",
    "crates/openrd-test-client",
]

[workspace.package]
edition = "2021"
version = "0.0.1"
license = "Apache-2.0"
authors = ["OpenRD Contributors"]
repository = "https://github.com/DarkGooden/OpenRD"
rust-version = "1.75"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
rcgen = "0.13"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
rand = "0.9"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
