[package]
name = "openrd-proto"
description = "OpenRD wire-protocol types, framing, and channel definitions"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ciborium = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
bytes = { workspace = true }
